--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
 
-    <div class="tab">
-        <button type="button" class="botao" id="exum">um</button>
-        <button type="button" class="botao" id="exdois">dois</button>
-        <button type="button" class="botao" id="extres">tres</button>
-        <button type="button" class="botao" id="exquatro">quatro</button>
-        <button type="button" class="botao" id="excinco">cinco</button>
-        <button type="button" class="botao" id="exseis">seis</button>
-    </div>
+    <header>
+        <div class="tab">
+            <button type="button" class="botao" id="exum">um</button>
+            <button type="button" class="botao" id="exdois">dois</button>
+            <button type="button" class="botao" id="extres">tres</button>
+            <button type="button" class="botao" id="exquatro">quatro</button>
+            <button type="button" class="botao" id="excinco">cinco</button>
+            <button type="button" class="botao" id="exseis">seis</button>
+        </div>
+
+    </header>
 
     <main id="main">
 
